--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "uvicorn>=0.22.0",
     "langchain>=0.3.26",
     "langchain-groq>=0.3.6",
+    "redis[async]",
     "openai-agents>=0.2.1",
     "pinecone>=7.0.0",
     "pypdf2>=3.0.1",
