--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,11 @@ dependencies = [
     "langchain>=0.3.26",
     "langchain-groq>=0.3.6",
     "redis[async]",
+    "openai>=1.0.0",
     "openai-agents>=0.2.1",
     "pypdf2>=3.0.1",
     "python-dotenv>=1.1.1",
     "sentence-transformers>=5.0.0",
     "pinecone>=7.3.0",
+    "upstash-redis>=1.4.0",
 ]
