--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ openai>=1.0.0
 openai-agents>=0.2.1
 pypdf2>=3.0.1
 python-dotenv>=1.1.1
-sentence-transformers>=5.0.0
-pinecone>=7.3.0
+spacy>=3.7.0
+pinecone-client>=3.0.0
 upstash-redis>=1.4.0
