--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "openai-agents>=0.2.1",
     "pypdf2>=3.0.1",
     "python-dotenv>=1.1.1",
-    "sentence-transformers>=5.0.0",
-    "pinecone>=7.3.0",
+    "spacy>=3.7.0",
+    "pinecone-client>=3.0.0",
     "upstash-redis>=1.4.0",
+    "spacy>=3.8.7",
 ]
